# SDK

LinuxSDK-v2.5/LinuxSDK/brandy/brandy-2.0/tools/: build.sh
LinuxSDK-v2.5/LinuxSDK/brandy/brandy-2.0/u-boot-2018/: sun50iw9p1_nor_defconfig
LinuxSDK-v2.5/LinuxSDK/buildroot/buildroot-201902/: Makefile  build.sh
LinuxSDK-v2.5/LinuxSDK/buildroot/buildroot-201902/configs/: sun50iw9p1_longan_defconfig  sun8iw20p1_t113_defconfig
LinuxSDK-v2.5/LinuxSDK/buildroot/buildroot-201902/fs/: common.mk
LinuxSDK-v2.5/LinuxSDK/buildroot/buildroot-201902/package/: Config.in
LinuxSDK-v2.5/LinuxSDK/buildroot/buildroot-201902/toolchain/: toolchain-wrapper.mk
LinuxSDK-v2.5/LinuxSDK/device/config/rootfs_tar/: mini_rootfs.tar.bz2
LinuxSDK-v2.5/LinuxSDK/kernel/linux-4.9/: MAINTAINERS
LinuxSDK-v2.5/LinuxSDK/kernel/linux-4.9/block/: blk-core.c
LinuxSDK-v2.5/LinuxSDK/kernel/linux-4.9/fs/: eventpoll.c  exec.c  namei.c
LinuxSDK-v2.5/LinuxSDK/kernel/linux-4.9/init/: Kconfig  main.c
LinuxSDK-v2.5/LinuxSDK/platform/framework/libcedarc/demo/vdecoderDemo/: Android.bp_d  Android.mk  Makefile.am  rawStreamParser.c  vdecoderDemo.c
LinuxSDK-v2.5/LinuxSDK/platform/framework/libcedarc/demo/vencoderDemo/: Android.bp_d  Android.mk  EncoderTest.c  Makefile.am
gst_UDP_H264_dec_cv_edge/src/: Rules.mk  display.cpp  gst_rtsp_dec_cv_edge  main.cpp  makefile  parameter_parser.c  sobel.h  udp_camera.cpp  udp_camera.h
gst_rtsp_dec_cv_edge/src/: Rules.mk  disp_dev.cpp  disp_dev.h  display.h  main.cpp  makefile  parameter_parser.h  rtsp_camera.cpp  rtsp_camera.h  sobel.cpp
lcd_demo/src/: lcd_demo.c  makefile
(+907 files in other folders)
